--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
+# Git LFS - Track large files
 vectorstore/*.faiss filter=lfs diff=lfs merge=lfs -text
 vectorstore/*.pkl filter=lfs diff=lfs merge=lfs -text
+*.faiss filter=lfs diff=lfs merge=lfs -text
+*.pkl filter=lfs diff=lfs merge=lfs -text
+vectorstore.zip filter=lfs diff=lfs merge=lfs -text
+data/documents/*.pdf filter=lfs diff=lfs merge=lfs -text
