Update MedGPT: OpenRouter integration with streaming support and improved error handling

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ python-dotenv==1.0.1
 groq==0.32.0
 langchain==0.3.13
 langchain-community==0.3.13
-langchain-groq==0.2.1
-langchain-core==0.3.28
-
+google-generativeai==0.7.2  # Add this for Gemini
+langchain==0.3.13
+langchain-community==0.3.13
 # Embeddings
 sentence-transformers==3.3.1
 torch==2.5.1
